# gridtools

./: .gitignore  .pre-commit-config.yaml  .python-version  404.html  LICENSE  Makefile  README.md  conftest.py  index.html  mkdocs.yml  pyproject.toml  requirements.txt  setup.cfg  test_derived_path.py
.github/workflows/: docs.yml
chirp_instantaneous_freq/: filters.py  test_parameters.py
code/: anmothertest.py  better_positions.ipynb  confloadertest.py  diffmatrixtest.py  grid.py  makeLogger.py  minigrid.py  nix_open.py  nix_write.py  open_gridnidx.py  open_minigrid.py  opentest.py  polyfit_q10.py  pywaveletstest.py  test.py  testfile.nix  testgrid.nix  whatisthat.py
data/2020-03-16-10_00_subset/: chirp_ids_gt.npy  chirp_times_gt.npy  idx_v.npy  times.npy
data/tmp/2020-03-16-10_00_subset/: fund_v.npy  ident_v.npy  sign_v.npy
datasets/: index.html
demos/: cwt_chirp_extraction.py  plotstyle.py  stft_chirp_extraction.py
docs/: CNAME  gridtools.html  index.html  index.md  search.js
docs/gridtools/: datasets.html  fakegrid.html  preprocessing.html
fakegrid/: Untitled-1.ipynb  Untitled-1.md  cwt_exploration.py  cwt_ridge_chirp.py  dipole.py  example.py  example2.py  example_scales_selection.py  examplexyz.py  fakefish.py  fakegrid.py  fish_extraction.py  fish_movement.py  fish_signal.py  gtptest.py  main.py  movement.py  plotstyle.py  plottest.py  ridge_extraction.py  simulation.py  simulations.py  stfft_ridge_chirp.py
gridtools/: README.md  Session.vim  __init__.py  chirpextraction.py  dataconverter.py  datasets.py  exceptions.py  extract_chirps.py  fakegrid.py  functions.py  gridtools.py  preprocessing.py  pyproject.toml  resample_chirp_params.py  setup.py  simulations.py  simulations.toml  subset.py
gridtools.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
gridtools/config/: README.md  simulations.toml
gridtools/data/: prepro_conf.yml
gridtools/datasets/: __init__.py  loaders.py  models.py  savers.py  subsetters.py
gridtools/gridtools/: __init__.py  logger.py  plotstyle.py
gridtools/gridtools/annotation/: covdetector.py  rises.py  syncmods.py
gridtools/gridtools/exceptions/: __init__.py  exceptions.py
gridtools/gridtools/prepro/: __init__.py  gridcleaner.py  main.py  prepro.py
gridtools/gridtools/preprocessing/: gridcleaner.py  gridrecording.py  makepointers.py  prepro.py  tonix.py
gridtools/gridtools/test/: test_datahandling.py
gridtools/gridtools/toolbox/: __init__.py  datahandling.py  filehandling.py  spatial.py
gridtools/gridtools/utils/: datahandling.py  filehandling.py  spatial.py
gridtools/preprocessing/: preprocessing.py
gridtools/simulations/: README.md  communication.py  eod.py  fakegrid.py  movement.py  noise.py  simulations.py  utils.py  visualizations.py
gridtools/simulations/trash/: simulations.py
gridtools/tests/: test_datahandling.py  test_filehandling.py  test_spatial.py
gridtools/tests/testdata/: confloader_test.yml
gridtools/utils/: config_files.py  configfiles.py  datasets.py  filters.py  logger.py  new_datasets.py  spectrograms.py  transforms.py
gridtools_new/gridtools/preprocessing/: preprocessing.py
gridtools_new/gridtools/utils/: datasets.py  logger.py
pkg/: pyproject.toml
pkg/tests/: test_datahandling.py
preprocessing/: index.html
search/: search_index.json
simulations/: index.html
tests/: test_datasets.py  test_fakegrid.py  test_simulations.py
