[tool.poetry]
name = "gridtools"
version = "0.0.1"
description = "A toolbox to work with electrode grid recordings of wave-type weakly electric fish more efficiently."
authors = ["weygoldt <patrick@weygoldt.com>"]
homepage = "https://weygoldt.com"
license = "MIT"
readme = "README.md"
keywords = ["datascience", "biology", "neuro", "behavior", "bioinformatics"]
include = ["data", "tests"]

[tool.poetry.dependencies]
python = ">=3.11, <3.13"
numpy = "^1.26.1"
rich = "^13.6.0"
argparse = "^1.4.0"
matplotlib = "^3.8.0"
scipy = "^1.11.3"
pydantic = "^2.4.2"
pandas = "^2.1.2"
audioio = {git = "https://github.com/janscience/audioio.git"}
thunderfish = {git = "https://github.com/weygoldt/thunderfish.git"}
pyaml = "^23.9.7"
torch = "^2.1.0"
torchaudio = "^2.1.0"
torchvision = "^0.16.0"
pillow = "^10.1.0"
albumentations = "^1.3.1"
rich-argparse = "^1.4.0"
click = "^8.1.7"
rich-click = "^1.7.1"

[tool.poetry.group.dev.dependencies]
black = "^23.10.0"
isort = "^5.12.0"
pylint = "^3.0.1"
pytest = "^7.4.2"
pre-commit = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gridtools = "gridtools.gridtools:cli"
gdt = "gridtools.gridtools:cli"
dataconverter = "gridtools.dataconverter:dataconverter_cli"
fakegrid = "gridtools.fakegrid:fakegrid_cli"
hybridgrid = "gridtools.fakegrid:hybridgrid_cli"
movement-demo = "gridtools.simulations:movement_demo"
communication-demo = "gridtools.simulations:communication_demo"
grid-demo = "gridtools.simulations:grid_demo"
subset-dataset = "gridtools.datasets:subset_cli"
extract-chirps = "gridtools.chirpextraction:extract_cli"
resample-chirps = "gridtools.chirpextraction:resample_cli"

[tool.isort]
profile = "black"

[tool.black]
line-length = 80
target-version = ["py311"]

[tool.pylint]
disable = ["W0511", "R0914"]
