[tool.poetry]
name = "gridtools"
version = "0.0.1"
description = "A toolbox to work with electrode grid recordings of wave-type weakly electric fish more efficiently."
authors = ["weygoldt <patrick@weygoldt.com>"]
homepage = "https://weygoldt.com"
license = "MIT"
readme = "README.md"
keywords = ["datascience", "biology", "neuro", "behavior", "bioinformatics"]
include = ["data", "tests"]

[tool.poetry.dependencies]
python = ">=3.11, <3.13"
numpy = "^1.26.1"
rich = "^13.6.0"
argparse = "^1.4.0"
matplotlib = "^3.8.0"
scipy = "^1.11.3"
pydantic = "^2.4.2"
pandas = "^2.1.2"
audioio = {git = "https://github.com/janscience/audioio.git"}
thunderfish = {git = "https://github.com/weygoldt/thunderfish.git"}
pyaml = "^23.9.7"
torch = "^2.1.0"
torchaudio = "^2.1.0"
torchvision = "^0.16.0"
pillow = "^10.1.0"
albumentations = "^1.3.1"
rich-argparse = "^1.4.0"
click = "^8.1.7"
rich-click = "^1.7.1"
toml = "^0.10.2"
typer = {extras = ["all"], version = "^0.9.0"}
joblib = "^1.3.2"
numba = "^0.58.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pre-commit = "^3.5.0"
ruff = "^0.1.6"
pytest-coverage = "^0.0"
pyright = "^1.1.337"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gridtools = "gridtools.gridtools:cli"
gdt = "gridtools.gridtools:cli"
dataconverter = "gridtools.dataconverter:dataconverter_cli"
fakegrid = "gridtools.fakegrid:fakegrid_cli"
hybridgrid = "gridtools.fakegrid:hybridgrid_cli"
movement-demo = "gridtools.simulations:movement_demo"
communication-demo = "gridtools.simulations:communication_demo"
grid-demo = "gridtools.simulations:grid_demo"
subset-dataset = "gridtools.datasets:subset_cli"
extract-chirps = "gridtools.chirpextraction:extract_cli"
resample-chirps = "gridtools.chirpextraction:resample_cli"

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = [
    "W", # pycodestyle
    "E", # pycodestyle
    "F", # Pyflakes
    "UP", # pyupgrade
    "B", # flake8-bugbear
    "SIM", # flake8-simplify
    "ANN", # flake8-annotations
    "A", # flake8-builtins
    "COM", # flake8-commas
    "C4", # flake8-comprehensions
    "EM", # flake8-error-msg
    "EXE", # flake8-executable
    "ICN", # flake8-import-conventions
    "PT", # flake8-pytest-style
    "Q", # flake8-quotes
    "RET", # flake8-return
    "SIM", # flake8-simplify
    "ARG", # flake8-unused-arguments
    "PTH", # flake8-use-pathlib
    "PD", # pandas-vet
    "PL", # pylint
    "TRY", # tryceratops
    "NPY", # numpy-specific
    "I", # isort
    "C90", # complexity (McCabe)
    "N", # pep8-naming
    "D", # pydocstyle
]
ignore = [
    "COM812", # missing trailing comma
    "TD002", # missing todo author
    "TD003", # missing todo link
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.black]
line-length = 79

[tool.pyright]
include = ["chirpdetector", "tests"]
defineConstant = { DEBUG = true }
reportMissingImports = true
reportMissingTypeStubs = false
pythonVersion = "3.11"
pythonPlatform = "Linux"
